new proj/src/objects/GE_HQ_TAM_SAS_Snap__c.object
<CustomObject>
    <description>This Object contains TAM and SAS summary information, plug value and Final Result at account planning level</description>
    <fields>
        <fullName>GE_HQ_Acc_Planning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Planning</label>
        <referenceTo>GE_HQ_Account_Plan__c</referenceTo>
        <relationshipLabel>TAM/SAS Snapshot</relationshipLabel>
        <relationshipName>TAM_SAS_Snapshot</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Final_Result__c</fullName>
        <formula>GE_HQ_TAM_SAS_SumVal__c  + GE_HQ_Plug__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Result</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Plug__c</fullName>
        <label>Plug</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_HQ_TAM_SAS_SumVal__c</fullName>
        <label>TAM/SAS Summary Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Tier2_P_L__c</fullName>
        <label>Tier2 - P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>Aero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;PS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dresser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Env</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gasification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jenbacher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuclear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PII</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water IWS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wind Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wind Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>SAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>TAM/SAS Snapshot</label>
    <nameField>
        <displayFormat>SNAP-{0000000}</displayFormat>
        <label>TAM/SAS Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TAM/SAS Snapshot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>